data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_413.wast
;; 4. **Test Description 4:**    - Create a `loop` with an incorrectly handled result type on the operand stack when a `br` instruction is executed, causing the stack to get stuck in the loop unintentionally.    - **Constraint: Result Type Matching**    - **Relation to Infinite Loop:** Incorrect operand types fail to break the loop.

(assert_invalid
  (module
    (func $type-arg-mismatch-loop
      (loop (result i32)
        (br 0 (i32.const 0) (f32.const 1.0))
      )
    )
  )
  "type mismatch"
)